--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -29,6 +29,7 @@ jobs:
           npm install -g jest
           npm run build --if-present
           npm run test --if-present
+          mv node_modules dist/node_modules
           cd ../client
           npm install
           npm run build --if-present
