--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "mssql": "^10.0.4",
     "pg": "^8.12.0",
     "pg-connection-string": "^2.6.4",
     "reflect-metadata": "^0.2.0",
