--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -36,6 +36,16 @@ jobs:
           npm run test --if-present
           mv dist ../server/dist/client
 
+      - name: Deploy database
+        shell: bash
+        env:
+          AZURE_SQL_DATABASE: ${{secrets.AZURE_SQL_DATABASE}}
+          AZURE_SQL_SERVER: ${{secrets.AZURE_SQL_SERVER}}
+          AZURE_SQL_USERNAME: ${{secrets.AZURE_SQL_USERNAME}}
+          AZURE_SQL_PASSWORD: ${{secrets.AZURE_SQL_PASSWORD}}
+          AZURE_SQL_PORT: ${{secrets.AZURE_SQL_PORT}}
+        run: npm run migration:run
+         
       - name: Zip artifact for deployment
         run: zip release.zip ./server/dist/* -r
 
@@ -54,7 +64,7 @@ jobs:
     permissions:
       id-token: write #This is required for requesting the JWT
 
-    steps:
+    steps:          
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
