--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -44,7 +44,9 @@ jobs:
           AZURE_SQL_USERNAME: ${{secrets.AZURE_SQL_USERNAME}}
           AZURE_SQL_PASSWORD: ${{secrets.AZURE_SQL_PASSWORD}}
           AZURE_SQL_PORT: ${{secrets.AZURE_SQL_PORT}}
-        run: npm run migration:run
+        run: |
+          cd server
+          npm run migration:run
          
       - name: Zip artifact for deployment
         run: zip release.zip ./server/dist/* -r
