--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -40,6 +40,13 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5AC3F3CD9D0C4ACAB8ED4FFA891B22D3 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_19DDC1F8896A4EE6949E2D535E1C2272 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C4683613699A4C5CA62D74BDD61CB171 }}    
+          
       - name: Deploy database
         env:
           AZURE_SQL_DATABASE: ${{secrets.AZURE_SQL_DATABASE}}
