--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +48,7 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5AC3F3CD9D0C4ACAB8ED4FFA891B22D3 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_19DDC1F8896A4EE6949E2D535E1C2272 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C4683613699A4C5CA62D74BDD61CB171 }}    
-          
+
       - name: Deploy database
         env:
           AZURE_SQL_DATABASE: ${{secrets.AZURE_SQL_DATABASE}}
@@ -55,10 +57,10 @@ jobs:
           AZURE_SQL_PASSWORD: ${{secrets.AZURE_SQL_PASSWORD}}
           AZURE_SQL_PORT: ${{secrets.AZURE_SQL_PORT}}
         run: |
-          az sql server firewall-rule create --resource-group YourResourceGroupName --server $AZURE_SQL_SERVER --name GithubAction --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
+          az sql server firewall-rule create --resource-group Kanban --server $AZURE_SQL_SERVER --name GithubAction --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
           cd server
           npm run migration:run
-          az sql server firewall-rule delete --resource-group YourResourceGroupName --server $AZURE_SQL_SERVER --name GithubAction
+          az sql server firewall-rule delete --resource-group Kanban --server $AZURE_SQL_SERVER --name GithubAction
 
       - name: Prepare deployment artifact
         run: |
