--- a/.github/workflows/main_kanban-desk.yml
+++ b/.github/workflows/main_kanban-desk.yml
@@ -23,15 +23,40 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd server
+          npm install
+          npm install -g @nestjs/cli
+          npm install -g jest
+          npm i -g typeorm
+          npm i -g ts-node
+          npm run build --if-present
+          npm run test --if-present
+          cd ../client
           npm install
           npm run build --if-present
           npm run test --if-present
 
+      - name: Deploy database
+        env:
+          AZURE_SQL_DATABASE: ${{secrets.AZURE_SQL_DATABASE}}
+          AZURE_SQL_SERVER: ${{secrets.AZURE_SQL_SERVER}}
+          AZURE_SQL_USERNAME: ${{secrets.AZURE_SQL_USERNAME}}
+          AZURE_SQL_PASSWORD: ${{secrets.AZURE_SQL_PASSWORD}}
+          AZURE_SQL_PORT: ${{secrets.AZURE_SQL_PORT}}
+        run: |
+          cd server
+          npm run migration:run
+
+      - name: Prepare deployment artifact
+        run: |
+          mv server/node_modules server/dist/node_modules
+          mv client/dist server/dist/client
+
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./server/dist/* -r
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: release.zip
@@ -47,7 +72,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: node-app
 
@@ -55,7 +80,7 @@ jobs:
         run: unzip release.zip
       
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4C056EAE224541E4AC10060AA500C439 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AFC9FDE736424462842E02432DF6EE44 }}
@@ -63,9 +88,10 @@ jobs:
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'kanban-desk'
           slot-name: 'Production'
           package: .
+          
           
