--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.24.1",
