--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
